# timer-cli

./: .gitignore  Cargo.toml  LICENSE  README.md  refac.md  refactoring.md  refactoring_gemini.md  refactoring_gpt.md  run_timer_reactoring_gemini.md  todo.md
.github/workflows/: release.yml
src/: error.rs  main.rs  timer.rs
