[package]
name = "timer-cli"
version = "0.1.0"
edition = "2024"
description = "timer for cli"

[dependencies]
tokio = { version = "1.49.0", features = ["full"]}

[package.metadata.deb]
maintainer = "omelet3032 <omelet3032@gmail.com>"
copyright = "2026, omelet3032"
license-file = ["LICENSE", "0"] # 루트에 LICENSE 파일이 있어야 함 (없으면 이 줄 삭제)
extended-description = """
terminal app 
timer-cli
"""
# 실행 파일 설치 경로 설정
assets = [
    ["target/release/timer-cli", "/usr/bin/timer-cli", "755"],
]
# 설치 시 필요한 패키지가 있다면 추가 (기본적으로 libc 등은 자동 계산됨)
depends = "$auto"
