[package]
name = "timer-cli"
version = "0.1.2"
edition = "2024"
description = "timer for cli"
license = "MIT"
repository = "https://github.com/omelet3032/timer-cli.git"

[dependencies]
tokio = { version = "1.49.0", features = ["full"]}

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[package.metadata.deb]
maintainer = "omelet3032 <omelet3032@gmail.com>"
copyright = "2026, omelet3032"
license-file = ["LICENSE", "0"] 
extended-description = """
terminal app 
timer-cli
"""
assets = [
    ["target/release/timer-cli", "/usr/bin/timer-cli", "755"],
]
depends = "$auto"
